# AviUtl2-DepthMapFilter

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DepthMapFilter.sln  Directory.Build.props  LICENSE.txt  README.md  ThirdPartyNotices.md  aviutl2.toml  mise.toml  package.txt
.github/workflows/: releaser.yaml
DepthMapFilter/: .clang-format  DepthMapFilter.vcxproj  main.cpp  packages.config
aviutl2_sdk/: filter2.h
python/: export.py  pyproject.toml
src/: main.cpp
tools/: build_opencv.ps1  onnx_export.ps1
